test: ProductRankingEventHandlerTest에서 ProductOrderInfo 리스트 초기화 방식 변경